RESOLVED FIXED212391
REGRESSION (async oveflow): scrubber missing from inline video inside overflow scroll
https://bugs.webkit.org/show_bug.cgi?id=212391
Summary REGRESSION (async oveflow): scrubber missing from inline video inside overflo...
Simon Fraser (smfr)
Reported 2020-05-26 16:31:09 PDT
REGRESSION (async oveflow): scrubber missing from inline video inside overflow scroll
Attachments
Patch (7.15 KB, patch)
2020-05-26 16:32 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-05-26 16:32:42 PDT
Simon Fraser (smfr)
Comment 2 2020-05-26 16:32:44 PDT
EWS
Comment 3 2020-05-26 20:36:50 PDT
Committed r262174: <https://trac.webkit.org/changeset/262174> All reviewed patches have been landed. Closing bug and clearing flags on attachment 400286 [details].
Note You need to log in before you can comment on or make changes to this bug.