REGRESSION (async oveflow): scrubber missing from inline video inside overflow scroll https://bugs.webkit.org/show_bug.cgi?id=212391 <rdar://problem/63089859>

Reviewed by Zalan Bujtas.

Source/WebCore:

backgroundClipRect() is in the coordinate space of the ClipRectContext's rootLayer, not the receiver,
so when converting to absolute coordinates we must use the ClipRectContext's rootLayer.

Test: compositing/layer-creation/overlap-in-scroller.html

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::addToOverlapMap const):

LayoutTests:

* compositing/layer-creation/overlap-in-scroller-expected.html: Added.
* compositing/layer-creation/overlap-in-scroller.html: Added.


Canonical link: https://commits.webkit.org/225234@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262174 268f45cc-cd09-0410-ab3c-d52691b4dbfc